...
    <string name="mobile_collapsed_0084e8fa">Collapsed</string>
    <string name="mobile_computer_924645b3">Computer</string>
    <string name="mobile_configure_composio_on_your_compute_4281e8b0">Configure Composio on your computer first. Provider credentials are never returned to this phone.</string>
    <string name="mobile_confirm_computer_d778cfbd">Confirm computer</string>
    <string name="mobile_connect_b65463cb">Connect</string>
    <string name="mobile_connect_card_label_c9e612b4">Connect %1$s</string>
    <string name="mobile_connected_c2f9b7b4">Connected</string>
    <string name="mobile_connected_apps_8ab72a8e">Connected Apps</string>
    <string name="mobile_connected_apps_need_setup_2cdb536a">Connected apps need setup</string>
    <string name="mobile_connecting_fd3e7969">Connecting…</string>
    <string name="mobile_connection_unknown_973b0484">Connection unknown</string>
    <string name="mobile_continue_2e026239">Continue</string>
    <string name="mobile_copied_8e3df45a">Copied</string>
...
    <string name="mobile_new_thread_with_bot_name_80fb4510">New thread with %1$s</string>
    <string name="mobile_newer_schedule_c56a41aa">Newer schedule</string>
    <string name="mobile_next_bc981983">Next</string>
    <string name="mobile_next_version_514439d0">Next version</string>
    <string name="mobile_no_connected_apps_are_available_fr_0529e71d">No connected apps are available from this computer.</string>
    <string name="mobile_no_limit_10850b93">No limit</string>
    <string name="mobile_not_now_e4571490">Not now</string>
    <string name="mobile_ok_9ce3bd42">OK</string>
    <string name="mobile_old_proposal_hint">This proposal was created by an older build and cannot be safely enabled. Deny it and ask the bot to create it again.</string>
    <string name="mobile_card_waiting_on_you">%1$s is waiting on you</string>
    <string name="mobile_card_send_to_app">Send to %1$s?</string>
    <string name="mobile_card_send_on_your_behalf">Send on your behalf?</string>
    <string name="mobile_card_details">Details</string>
...
    <string name="mobile_thought_process_1756ad28">Thought Process</string>
    <string name="mobile_threads_bb12e8aa">Threads</string>
    <string name="mobile_threads_routines_65d7efcd">Threads &amp; Routines</string>
    <string name="mobile_time_6c82e6dd">Time</string>
    <string name="mobile_title_768e0c1c">Title</string>
    <string name="mobile_touch_and_hold_the_text_to_select__efc64a9c">Touch and hold the text to select part of it.</string>
    <string name="mobile_try_again_042c862e">Try again</string>
    <string name="mobile_type_your_own_answer_84cf9943">Type your own answer</string>
    <string name="mobile_unpair_9c293ad4">Unpair</string>
    <string name="mobile_unread_07b032b5">Unread</string>
    <string name="mobile_updates_c76d1807">Updates</string>
    <string name="mobile_use_open_to_view_this_file_in_a_co_9a046473">Use Open to view this file in a compatible app.</string>
    <string name="mobile_use_another_computer_ff6a1b80">Use another computer</string>
...
